--- a/heart.html
+++ b/heart.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love Letter</title>
+    <title>Megha?</title>
     <link rel="stylesheet" href="heart.css" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   </head>
   <body>
     <section>
