--- a/heart.html
+++ b/heart.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   </head>
   <body>
+    <audio loop id="bgm">
+        <source src="bgm.mp3" type="audio/mpeg" />
+      </audio>
     <section>
     
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
