--- a/heart.html
+++ b/heart.html
@@ -6,11 +6,13 @@
     <title>Megha?</title>
     <link rel="stylesheet" href="heart.css" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <script src="animation.js"></script>
+
   </head>
   <body>
     <audio loop id="bgm">
         <source src="bgm.mp3" type="audio/mpeg" />
-      </audio>
+    </audio>
     <section>
     
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -623,4 +625,7 @@
      <a href="index.html"><button>Back</button></a>
      
      </section>
+     <script src="app.js"></script>
+
   </body>
+  </html>
