--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="clock-text">
           
             <a href="heart.html">
-            <button >Click to see a heart</button>
+            <button >Wanna see a heart?</button>
             </a>
           </span>
           <h2 class="name">Since:</h2>
